tree-sitter-sley/test/corpus/control_flow.txt
================================================================================
bindings loops conditionals and maps
================================================================================

module app.maps_for

task main -> Int {
  bind names = ["ada", "grace", "linus"]
  bind scores: Map<Text, Int> = map {
    "ada": 3,
    "grace": 5,
    "linus": 7,
  }
  tally total = 0
  each name in names {
    set total = total + scores[name]
  }
  if total > 0 {
    return total
  } else {
    return 0
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (qualified_identifier
      (identifier)
      (identifier)))
  (task_declaration
    (identifier)
    (type_expression
      (qualified_identifier
        (identifier)))
    (task_block
      (statement
        (binding_statement
          (binding_keyword)
          (identifier)
          (expression
            (list_literal
              (expression
                (string))
              (expression
                (string))
              (expression
                (string))))))
      (statement
        (binding_statement
          (binding_keyword)
          (identifier)
          (type_annotation
            (type_expression
              (generic_type
                (qualified_identifier
                  (identifier))
                (type_expression
                  (qualified_identifier
                    (identifier)))
                (type_expression
                  (qualified_identifier
                    (identifier))))))
          (expression
            (map_literal
              (map_entry
                (expression
                  (string))
                (expression
                  (number)))
              (map_entry
                (expression
                  (string))
                (expression
                  (number)))
              (map_entry
                (expression
                  (string))
                (expression
                  (number)))))))
      (statement
        (binding_statement
          (binding_keyword)
          (identifier)
          (expression
            (number))))
      (statement
        (for_statement
          (identifier)
          (expression
            (qualified_identifier
              (identifier)))
          (block
            (statement
              (set_statement
                (identifier)
                (expression
                  (binary_expression
                    (expression
                      (qualified_identifier
                        (identifier)))
                    (expression
                      (index_expression
                        (expression
                          (qualified_identifier
                            (identifier)))
                        (expression
                          (qualified_identifier
                            (identifier))))))))))))
      (statement
        (if_statement
          (expression
            (binary_expression
              (expression
                (qualified_identifier
                  (identifier)))
              (expression
                (number))))
          (block
            (statement
              (return_statement
                (expression
                  (qualified_identifier
                    (identifier))))))
          (block
            (statement
              (return_statement
                (expression
                  (number))))))))))
